Separate notebook for analysis of reproductive strategy, based on big-5.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ aiohttp
 numpy
 pandas
 jupyterlab
+matplotlib
+plotly
 scikit-learn
 openpyxl
 nltk
@@ -15,3 +17,5 @@ transformers
 tokenizers
 datasets
 bertviz
+xgboost
+shap
